# PvZ-Portable

./: .gitattributes  CMakeLists.txt  README.md  diff.txt  old.cpp  test.c
.github/workflows/: ci.yml
android/app/src/main/res/values-es/: strings.xml
ios/es.lproj/: InfoPlist.strings
scripts/: download_main_pak.py  embed_folder.py
src/: ConstEnums.h  GameConstants.h  LawnApp.cpp  LawnApp.h  Resources.cpp  Resources.h  main.cpp
src/Lawn/: Board.cpp  Board.h  BoardInclude.h  Challenge.cpp  CursorObject.cpp  CutScene.cpp  Plant.cpp  Plant.h  Projectile.cpp  SeedPacket.cpp  ToolTipWidget.cpp  ZenGarden.cpp  Zombie.cpp  Zombie.h
src/Lawn/System/: PlayerInfo.cpp  PlayerInfo.h  ProfileMgr.h  ReanimationLawn.cpp  ReanimationLawn.h  SaveGame.cpp  Zombatar.cpp  Zombatar.h
src/Lawn/Widget/: AchievementsScreen.cpp  AlmanacDialog.cpp  AlmanacDialog.h  AwardScreen.cpp  ContinueDialog.cpp  CreditScreen.cpp  CreditScreen.h  GameSelector.cpp  MoreOptionsDialog.cpp  MoreOptionsDialog.h  NewOptionsDialog.cpp  NewOptionsDialog.h  SeedChooserScreen.cpp  SeedChooserScreen.h  SpawnZombieDialog.cpp  SpawnZombieDialog.h  StoreScreen.cpp  ZombatarScreen.cpp  ZombatarScreen.h  ZombatarTOS.cpp  ZombatarTOS.h
src/Sexy.TodLib/: Attachment.cpp  Definition.cpp  Reanimator.cpp  Reanimator.h  TodDebug.cpp  TodDebug.h  TodFoley.h  TodParticle.cpp
src/SexyAppFramework/: Common.cpp  LawnProject.rc  SexyAppBase.cpp  SexyAppBase.h  resource.h
src/SexyAppFramework/graphics/: GLInterface.cpp  GLInterface.h  GLPlatform.h
src/SexyAppFramework/imagelib/: ImageLib.cpp
src/SexyAppFramework/misc/: ResourceManager.cpp  XMLParser.cpp
src/SexyAppFramework/paklib/: PakEmbed.S  PakInterface.cpp  PakInterface.h
src/SexyAppFramework/platform/default/: Input.cpp  Window.cpp
src/SexyAppFramework/platform/emscripten/: Window.cpp
src/SexyAppFramework/platform/switch/: Input.cpp  Window.cpp
src/SexyAppFramework/platform/switch/graphics/: switch.frag.glsl  switch.vert.glsl
src/SexyAppFramework/sound/SDL-Mixer-X/src/: music.c
src/SexyAppFramework/sound/SDL-Mixer-X/src/codecs/stb_vorbis/: stb_vorbis.h
src/SexyAppFramework/widget/: Dialog.cpp
wasm/: shell.html
